third_party/rust/cxx/v1/crate/tests/ui/ptr_missing_unsafe.stderr
error: pointer argument requires that the function be marked unsafe
 --> $DIR/ptr_missing_unsafe.rs:6:27
  |
6 |         fn not_unsafe_ptr(c: *mut C);
  |                           ^^^^^^^^^
